@@ -8,7 +8,7 @@
 #         (Configuration examples in /usr/share/drlm/conf/samples/)           #
 ###############################################################################
 
-# DRLM v2.4.8
+# DRLM v2.4.9
 #
 
 # DRLM automatically generates a ReaR configuration file in function of three
